--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Welcome to My GitHub Page</title>
 </head>
 <body>
-  <h1>Hello, I'm Selomics!</h1>
+  <h1>Hello, I'm Selen Yilmaz, MS!</h1>
   <p>This is my personal GitHub page.</p>
 </body>
 </html>
